# semantix

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
semantix/: __init__.py  config.py  main.py
semantix/api/: __init__.py  routes.py  ws.py
semantix/ingest/: __init__.py  parsers.py  watcher.py
semantix/labeling/: __init__.py  heuristics.py  votes.py
semantix/store/: __init__.py  redis.py  schema.py
semantix/train/: __init__.py  pipeline.py  workers.py
semantix/ui/: __init__.py  app.py  components.py
semantix/utils/: hashing.py  logging.py  textnorm.py
